# ktp-contact-runner

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  Messages.sh  contactrunner.cpp  contactrunner.h  ktp-contact-runner.cpp  ktp-contact-runner.desktop  ktp-contact-runner.h  plasma-runner-ktp-contact.desktop  plasma-runner-ktp-contact.desktop.cmake
po/bs/: plasma_runner_ktp_contacts.po
po/ca/: plasma_runner_ktp_contacts.po
po/ca@valencia/: plasma_runner_ktp_contacts.po
po/cs/: plasma_runner_ktp_contacts.po
po/da/: plasma_runner_ktp_contacts.po
po/de/: plasma_runner_ktp_contacts.po
po/el/: plasma_runner_ktp_contacts.po
po/en_GB/: plasma_runner_ktp_contacts.po
po/es/: plasma_runner_ktp_contacts.po
po/et/: plasma_runner_ktp_contacts.po
po/eu/: plasma_runner_ktp_contacts.po
po/fi/: plasma_runner_ktp_contacts.po
po/fr/: plasma_runner_ktp_contacts.po
po/ga/: plasma_runner_ktp_contacts.po
po/gl/: plasma_runner_ktp_contacts.po
po/hu/: plasma_runner_ktp_contacts.po
po/ia/: plasma_runner_ktp_contacts.po
po/it/: plasma_runner_ktp_contacts.po
po/ja/: plasma_runner_ktp_contacts.po
po/ka/: plasma_runner_ktp_contacts.po
po/kk/: plasma_runner_ktp_contacts.po
po/km/: plasma_runner_ktp_contacts.po
po/ko/: plasma_runner_ktp_contacts.po
po/lt/: plasma_runner_ktp_contacts.po
po/mr/: plasma_runner_ktp_contacts.po
po/nb/: plasma_runner_ktp_contacts.po
po/nds/: plasma_runner_ktp_contacts.po
po/nl/: plasma_runner_ktp_contacts.po
po/nn/: plasma_runner_ktp_contacts.po
po/pa/: plasma_runner_ktp_contacts.po
po/pl/: plasma_runner_ktp_contacts.po
po/pt/: plasma_runner_ktp_contacts.po
po/pt_BR/: plasma_runner_ktp_contacts.po
po/ro/: plasma_runner_ktp_contacts.po
po/ru/: plasma_runner_ktp_contacts.po
po/sk/: plasma_runner_ktp_contacts.po
po/sl/: plasma_runner_ktp_contacts.po
po/sr/: plasma_runner_ktp_contacts.po
po/sr@ijekavian/: plasma_runner_ktp_contacts.po
po/sr@ijekavianlatin/: plasma_runner_ktp_contacts.po
po/sr@latin/: plasma_runner_ktp_contacts.po
po/sv/: plasma_runner_ktp_contacts.po
po/tr/: plasma_runner_ktp_contacts.po
po/ug/: plasma_runner_ktp_contacts.po
po/uk/: plasma_runner_ktp_contacts.po
po/vi/: plasma_runner_ktp_contacts.po
po/zh_CN/: plasma_runner_ktp_contacts.po
po/zh_TW/: plasma_runner_ktp_contacts.po
src/: contactrunner.cpp  contactrunner.h  settingsdialog.cpp  settingsdialog.h
